Fix up JMH test, and improve existence test performance, especially for Windows.
Note that Windows C (system) drive seems to have some core protections enabled that will always make file access slower for it. Put your stuff on a separate partition or drive.